--- a/dentaladmin/apps/treatment_sequences/templates/sequences/create.html
+++ b/dentaladmin/apps/treatment_sequences/templates/sequences/create.html
@@ -30,6 +30,18 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <label for="shift" class="col-md-2 control-label">Shift</label>
+                        <div class="col-md-8">
+                            <div class="ui-select" style="width: 100%;">
+                                <select id="shift" name="shift" required>
+                                    <option value="">Select</option>
+                                        <option value="morning" {% if shift == 'morning' %} {{ "selected" }} {% endif %}>Morning</option>
+                                    <option value="afternoon">Afternoon</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <label for="doctor_username" class="col-md-2 control-label">Doctor</label>
                         <div class="col-md-8">
                             <div class="ui-select" style="width: 100%;">
