Show related data between collections part 1

--- a/dentaladmin/apps/treatment_sequences/templates/sequences/list.html
+++ b/dentaladmin/apps/treatment_sequences/templates/sequences/list.html
@@ -73,10 +73,10 @@
                                     {{ sequence.shift|capfirst }}
                                 </td>
                                 <td>
-                                    {{ sequence.doctor }}
+                                    {{ sequence.doctor_name }}
                                 </td>
                                 <td>
-                                    {{ sequence.patient }}
+                                    {{ sequence.patient_name }}
                                 </td>
                                 <td>
                                     {% if sequence.status == 0 %}<span class="label label-danger">Canceled</span>{% endif %}
